--- a/_templates/global/MTurkPreview.html
+++ b/_templates/global/MTurkPreview.html
@@ -5,16 +5,21 @@
 
 {% block content %}
     <p>
-        This HIT is an academic experiment on decision making.
+        This HIT is an academic experiment on decision-making.
+        You will make decisions for which you will receive a bonus dependent on your and another participant’s decision,
+        in addition of a flat payment of $1.00 for completing a quiz.
+        You will be only allowed to continue with the experiment if you correctly answer the questions with
+        at most 3 attempts.
     </p>
 
     <p>
-        It will require you to interact with other workers in real time.
+        This experiment will require you to interact with other workers in real time.
         Some other workers may be waiting until you have completed a given task,
         before they can proceed.
         So, please be mindful of other participants and complete all tasks in a timely fashion.
         Please only accept ths HIT only if you can commit to completing it.
     </p>
+
 
     <p>
         After completing this HIT, you will receive your reward plus a bonus payment
