adding one-shot game for players who are not matched

--- a/_templates/global/MTurkPreview.html
+++ b/_templates/global/MTurkPreview.html
@@ -4,16 +4,27 @@
 {% block title %}Please read this before clicking "Accept"{% endblock %}
 
 {% block content %}
-    <p>
-        This HIT is an academic experiment on decision-making.
-        You will make decisions for which you will receive a bonus dependent on your and another participant’s decision,
-        in addition of a flat payment of $1.00 after completing the experiment.
+<p><strong>Title of the study:</strong>Group decision making</p>
+<p><strong>Length of the study:</strong> About 30 minutes </p>
+<p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment plus a bonus that depends on your decisions and the decisions of others (up to $5.00)</p>
 
-        To make sure you understand the experiment, there will be some quiz questions based on the decision situation.
-        You will be only allowed to continue with the experiment and be able to receive the flat payment if you correctly
-        answer the questions with at most 3 attempts.
-    </p>
+<p><strong>What this study is about:</strong> <br/>
+This is an academic experiment on group decision making. You will be matched with another participant recruited via MTurk, and receive a bonus dependent on
+    your and others' decisions.
+</p>
 
+
+<p><strong>Informed consent</strong> <br/>
+By accepting this HIT, you give us informed consent that we can use your answers in anonymized form for research purpose only.
+
+<ul>
+    <li>
+        ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY.
+    </li>
+    <li>
+    There will be quiz questions to check your understanding of the experiment.
+    You will be only allowed to continue with the experiment if you correctly
+    answer the questions with at most 3 attempts.
     <p>
         This experiment will require you to interact with other workers in real time.
         Some other workers may be waiting until you have completed a given task, before they can proceed.
@@ -22,8 +33,6 @@
         Please only accept ths HIT only if you can commit to completing it.
     </p>
 
-    <p>
-        After completing this HIT, you will receive your reward plus a bonus payment
-        that is based on how you play the experiment.
-    </p>
+</ul>
+
 {% endblock %}
