--- a/_templates/global/MTurkPreview.html
+++ b/_templates/global/MTurkPreview.html
@@ -4,34 +4,34 @@
 {% block title %}Please read this before clicking "Accept"{% endblock %}
 
 {% block content %}
-<p><strong>Title of the study:</strong>Group decision making</p>
+<p><strong>Title of the study:</strong> Group decision making</p>
 <p><strong>Length of the study:</strong> About 30 minutes </p>
-<p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment plus a bonus that depends on your decisions and the decisions of others (up to $5.00)</p>
+<p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment plus a bonus that depends on
+    your decisions and the decisions of others (up to $5.00)</p>
 
 <p><strong>What this study is about:</strong> <br/>
-This is an academic experiment on group decision making. You will be matched with another participant recruited via MTurk, and receive a bonus dependent on
-    your and others' decisions.
+    This is an academic experiment on group decision-making. You will be matched with another participant recruited via MTurk,
+    and receive a bonus dependent on your and the other participant's decisions.
 </p>
 
 
 <p><strong>Informed consent</strong> <br/>
-By accepting this HIT, you give us informed consent that we can use your answers in anonymized form for research purpose only.
+    By accepting this HIT, you give us informed consent that we can use your answers in anonymized form for research purpose only.
 
 <ul>
     <li>
-        ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY.
+        ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY. Please only accept ths HIT only if you can commit to completing it.
     </li>
     <li>
-    There will be quiz questions to check your understanding of the experiment.
-    You will be only allowed to continue with the experiment if you correctly
-    answer the questions with at most 3 attempts.
-    <p>
-        This experiment will require you to interact with other workers in real time.
-        Some other workers may be waiting until you have completed a given task, before they can proceed.
-        So, please be mindful of other participants, keep focused and complete all tasks in a timely fashion.
-        The experiment can last about 30 minutes.
-        Please only accept ths HIT only if you can commit to completing it.
-    </p>
+        There will be quiz questions to check your understanding of the experiment.
+        You are allowed to continue with the experiment if you correctly
+        answer the questions with at most 3 attempts.
+    <li>
+        You interact with other workers in real time.
+        Others may be waiting until you have completed a given task, before they can proceed.
+        The experiment proceed as fast as the slower participant.
+        Therefore, please be mindful of other participants, keep focused and complete all tasks in a timely fashion.
+    </li>
 
 </ul>
 
