check stochastic treatments

--- a/_templates/global/MTurkPreview.html
+++ b/_templates/global/MTurkPreview.html
@@ -6,12 +6,14 @@
 {% block content %}
 <p><strong>Title of the study:</strong> Group decision making</p>
 <p><strong>Length of the study:</strong> About 30 minutes </p>
-<p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment plus a bonus that depends on
+<p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment PLUS a bonus that depends on
     your decisions and the decisions of others (up to $5.00)</p>
 
 <p><strong>What this study is about:</strong> <br/>
     This is an academic experiment on group decision-making. You will be matched with another participant recruited via MTurk,
     and receive a bonus dependent on your and the other participant's decisions.
+<br/>
+ The experiment does NOT involve deception. All the information reveal in the experiment is truthful.
 </p>
 
 
@@ -20,17 +22,21 @@
 
 <ul>
     <li>
+       You will only be able to receive payment if you pass the quiz and finish the experiment.
+    </li>
+    <li>
         ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY. Please only accept ths HIT only if you can commit to completing it.
     </li>
     <li>
         There will be quiz questions to check your understanding of the experiment.
         You are allowed to continue with the experiment if you correctly
         answer the questions with at most 3 attempts.
+    </li>
     <li>
         You interact with other workers in real time.
-        Others may be waiting until you have completed a given task, before they can proceed.
         The experiment proceed as fast as the slower participant.
-        Therefore, please be mindful of other participants, keep focused and complete all tasks in a timely fashion.
+        Others may be waiting until you have completed a given task before they can proceed.
+        Please keep focused and complete all tasks in a timely fashion.
     </li>
 
 </ul>
