adding participaiton code, different way of running MTurk experiment

--- a/_templates/global/MTurkPreview.html
+++ b/_templates/global/MTurkPreview.html
@@ -9,20 +9,29 @@
 <p><strong>Payment:</strong> A flat fee of $1.00 upon completion of the experiment PLUS a bonus that depends on
     your decisions and the decisions of others (up to $5.00)</p>
 
-<p><strong>What this study is about:</strong> <br/>
-    This is an academic experiment on group decision-making. You will be matched with another participant recruited via MTurk,
-    and receive a bonus dependent on your and the other participant's decisions.
-<br/>
- The experiment does NOT involve deception. All the information reveal in the experiment is truthful.
+<p><strong>What this study is about:</strong>
 </p>
+<ul>
+    <li>
+    This is an academic experiment on group decision-making.
+    </li>
+    <li>
+        You will be matched with another participant recruited via MTurk, and receive a bonus dependent on your and the other participant's decisions.
+    </li>
+    <li>
+ The experiment DOES NOT involve deception. All the information revealed in the experiment is truthful.
+    </li>
+</ul>
 
 
 <p><strong>Informed consent</strong> <br/>
     By accepting this HIT, you give us informed consent that we can use your answers in anonymized form for research purpose only.
+</p>
 
 <ul>
     <li>
-        ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY. Please only accept ths HIT only if you can commit to completing it.
+        ABOUT 30 MINUTES REQUIRED WITHOUT INTERRUPTION, STARTING IMMEDIATELY.
+        Please only accept this HIT only if you can commit to completing it.
     </li>
     <li>
         There will be quiz questions to check your understanding of the experiment.
@@ -34,11 +43,10 @@
     </li>
     <li>
         You interact with other workers in real time.
-        The experiment proceed as fast as the slower participant.
+        The experiment proceeds as fast as the slower participant.
         Others may be waiting until you have completed a given task before they can proceed.
         Please keep focused and complete all tasks in a timely fashion.
     </li>
-
 </ul>
 
 {% endblock %}
